# image-qr-code-cli

./: .gitignore  README.md  pyproject.toml
src/imgqr/: main.py
